--- a/TraysFastUpdate/TraysFastUpdate.csproj
+++ b/TraysFastUpdate/TraysFastUpdate.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="DocumentFormat.OpenXml.Features" Version="3.2.0" />
     <PackageReference Include="DocumentFormat.OpenXml.Framework" Version="3.2.0" />
     <PackageReference Include="DocumentFormat.OpenXml.Linq" Version="3.2.0" />
+    <PackageReference Include="Excubo.Blazor.Canvas" Version="3.2.66" />
     <PackageReference Include="FluentValidation" Version="11.11.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.QuickGrid.EntityFrameworkAdapter" Version="8.0.11" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.11" />
