Added trefoil drawing of LV and MV cables

--- a/TraysFastUpdate/appsettings.json
+++ b/TraysFastUpdate/appsettings.json
@@ -1,6 +1,18 @@
+//{
+//  "ConnectionStrings": {
+//    "DefaultConnection": "Host=localhost;port=5432;Database=TrayFastUpdate;Username=postgres;Password=Shopska Salata;"
+//  },
+//  "Logging": {
+//    "LogLevel": {
+//      "Default": "Information",
+//      "Microsoft.AspNetCore": "Warning"
+//    }
+//  },
+//  "AllowedHosts": "*"
+//}
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;port=5432;Database=TrayFastUpdate;Username=postgres;Password=Shopska Salata;"
+    "DefaultConnection": "Host=localhost;port=5432;Database=TrayFastUpdate;Username=postgres;Password=1Todor123*-;"
   },
   "Logging": {
     "LogLevel": {
