--- a/TraysFastUpdate/TraysFastUpdate.csproj
+++ b/TraysFastUpdate/TraysFastUpdate.csproj
@@ -32,4 +32,9 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
   </ItemGroup>
+
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
 </Project>
