--- a/TraysFastUpdate/appsettings.json
+++ b/TraysFastUpdate/appsettings.json
@@ -1,18 +1,6 @@
-//{
-//  "ConnectionStrings": {
-//    "DefaultConnection": "Host=localhost;port=5432;Database=TrayFastUpdate;Username=postgres;Password=Shopska Salata;"
-//  },
-//  "Logging": {
-//    "LogLevel": {
-//      "Default": "Information",
-//      "Microsoft.AspNetCore": "Warning"
-//    }
-//  },
-//  "AllowedHosts": "*"
-//}
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;port=5432;Database=TrayFastUpdate;Username=postgres;Password=1Todor123*-;"
+    "DefaultConnection": "Host=localhost;port=5432;Database=TrayFastUpdate;Username=postgres;Password=Shopska Salata;"
   },
   "Logging": {
     "LogLevel": {
@@ -22,3 +10,15 @@
   },
   "AllowedHosts": "*"
 }
+//{
+//  "ConnectionStrings": {
+//    "DefaultConnection": "Host=localhost;port=5432;Database=TrayFastUpdate;Username=postgres;Password=1Todor123*-;"
+//  },
+//  "Logging": {
+//    "LogLevel": {
+//      "Default": "Information",
+//      "Microsoft.AspNetCore": "Warning"
+//    }
+//  },
+//  "AllowedHosts": "*"
+//}
