--- a/TraysFastUpdate/TraysFastUpdate.csproj
+++ b/TraysFastUpdate/TraysFastUpdate.csproj
@@ -30,6 +30,7 @@
     <PackageReference Include="MudBlazor" Version="8.2.0" />
     <PackageReference Include="Npgsql" Version="9.0.2" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.3" />
+    <PackageReference Include="OpenXmlPowerTools" Version="4.5.3.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
   </ItemGroup>
 
