--- a/TraysFastUpdate/TraysFastUpdate.csproj
+++ b/TraysFastUpdate/TraysFastUpdate.csproj
@@ -31,6 +31,7 @@
     <PackageReference Include="Npgsql" Version="9.0.2" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.3" />
     <PackageReference Include="OpenXmlPowerTools" Version="4.5.3.2" />
+    <PackageReference Include="SkiaSharp" Version="2.88.8" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
     <PackageReference Include="System.Drawing.Common" Version="9.0.1" />
   </ItemGroup>
